--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ vr.AllowMotionBlurInVR=True
 r.SkinCache.CompileShaders=True
 r.RayTracing=False
 r.PostProcessing.PropagateAlpha=1
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
