--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -103,8 +103,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUpRate",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
-+AxisMappings=(AxisName="SpinThing",Scale=1.000000,Key=Vive_Left_Trigger_Click)
-+AxisMappings=(AxisName="SpinThing",Scale=1.000000,Key=Vive_Right_Trigger_Click)
++AxisMappings=(AxisName="SpinThingL",Scale=1.000000,Key=Vive_Left_Trigger_Axis)
++AxisMappings=(AxisName="SpinThingR",Scale=1.000000,Key=Vive_Right_Trigger_Axis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
