--- a/ColorDoctor.uproject
+++ b/ColorDoctor.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "ICVFX",
 			"Enabled": true
+		},
+		{
+			"Name": "MovieRenderPipeline",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
